--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -260,6 +260,7 @@ bootstrap_module(
     deps   = STDLIB + [
         ":Lambda", ## (Lambda Lambda)
         ":Debuginfo", ## (Lambda Debuginfo)
+        ":Tmc",
         ## (Warnings)
         ## (Primitive)
         ## (Option)
@@ -271,7 +272,8 @@ bootstrap_module(
         ## (Fun)
         ## (Clflags)
         ## (Asttypes)
-    ]
+    ],
+    visibility = ["//middle_end/flambda:__pkg__"]
 )
 
 bootstrap_signature(
@@ -305,7 +307,26 @@ bootstrap_signature(
     src  = "switch.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
-    ]
+    ],
+    visibility = ["//middle_end/flambda:__pkg__"]
+)
+
+bootstrap_module(
+    name   = "Tmc",
+    struct = "tmc.ml",
+    sig    = "Tmc_cmi",
+    opts = MODULE_OPTS,
+    deps   = STDLIB + [
+    ],
+)
+
+bootstrap_signature(
+    name = "Tmc_cmi",
+    src  = "tmc.mli",
+    opts = SIG_OPTS,
+    deps   = STDLIB + [
+        ":Lambda_cmi",
+    ],
 )
 
 bootstrap_module(
